<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="app_name">module_lock</string>
    <string name="title_lock">锁列表</string>
    <string name="lock_group_all">全部分组</string>
    <string name="lock_search">搜索</string>
    <string name="lock_item_empty_tip_click">点击右上角的</string>
    <string name="lock_item_empty_tip_add">添加设备</string>
    <string name="lock_title_add_guide">添加智能锁</string>
    <string name="lock_add_guide_content1">确定手机蓝牙、手机网络保持打开状态;</string>
    <string name="lock_add_guide_content2">唤醒设备，确保指示灯处于闪烁状态;</string>
    <string name="lock_add_guide_content3">点击下一步，手机自动搜索设备，距离最近信号最强的为当前设备;</string>
    <string name="lock_add_guide_content4">点击列表绑定设备;</string>
    <string name="lock_add_guide_btn_next">下一步</string>
    <string name="lock_title_near_lock">附近的锁</string>
    <string name="lock_title_set_name">设置名称</string>
    <string name="lock_hint_set_name">请输入1-20位中文、字母或数字</string>
    <string name="lock_group_current">当前分组</string>
    <string name="lock_btn_confirm">确定</string>
    <string name="lock_cancel">取消</string>
    <string name="lock_sender">发送人</string>
    <string name="lock_send_time">发送时间</string>
    <string name="lock_key_info">钥匙详情</string>
    <string name="valid_time">生效时间</string>
    <string name="invalid_time">失效时间</string>
    <string name="lock_key_type">钥匙类型</string>
    <string name="lock_key_name">钥匙名称</string>
    <string name="lock_key_permission">钥匙权限</string>
    <string name="lock_accept_time">接收时间</string>
    <string name="lock_operation_record">操作记录</string>
    <string name="operation_record">操作记录</string>
    <string name="lock_save">保存</string>
    <string name="lock_clear_key">清空钥匙</string>
    <string name="lock_send_key">发送钥匙</string>
    <string name="lock_apply_key">申请钥匙</string>
    <string name="lock_apply_ask_for_hint">我想对管理员说</string>
    <string name="lock_permanent_key">永久钥匙</string>
    <string name="lock_once_key">单次钥匙</string>
    <string name="lock_loop_key">循环钥匙</string>
    <string name="lock_limited_time_key">限时钥匙</string>
    <string name="lock_commit_apply">提交申请</string>
    <string name="lock_device_id">设备ID</string>
    <string name="lock_device_mac">设备地址</string>
    <string name="lock_power">电量</string>
    <string name="lock_valid_date">有效期</string>
    <string name="lock_name">锁名称</string>
    <string name="lock_setting">锁设置</string>
    <string name="lock_choose_group">选择分组</string>
    <string name="lock_authorize_type">权限类型</string>
    <string name="lock_delete_key">删除钥匙</string>
    <string name="lock_start_date">启用日期</string>
    <string name="lock_end_state">停止日期</string>
    <string name="percentage_symbol">%</string>
    <string name="func_send_key">发送钥匙</string>
    <string name="func_manage_key">管理钥匙</string>
    <string name="func_operate_record">操作记录</string>
    <string name="func_lock_manage">锁设置</string>
    <string name="func_key_device">设备钥匙</string>
    <string name="func_key_ble">蓝牙钥匙</string>
    <string name="lock_search_lock">搜索设备</string>
    <string name="lock_tv_search_history">搜索历史</string>
    <string name="lock_share_string_search">search</string>
    <string name="lock_tip_apply_key">锁已经被添加，您可以发送钥匙申请给管理员。</string>
    <string name="lock_tip_already_bind">您当前已经绑定该锁，可删除后重新绑定。</string>
    <string name="lock_tip_have_key">您当前已获取该锁钥匙，请到首页查看。</string>
    <string name="lock_tip_bind_failed">锁绑定失败</string>
    <string name="lock_tip_bind_succed">锁绑定成功</string>
    <string name="lock_tip_setname_failed">修改锁名称失败</string>
    <string name="lock_tip_ble_not_support">蓝牙不支持</string>
    <string name="lock_tip_ble_not_finded">请唤醒锁设备</string>
    <string name="lock_tip_ble_unlock_failed">开锁失败</string>
    <string name="lock_tip_ble_unlock_success">开锁成功</string>
    <string name="refresh_success">刷新成功</string>
    <string name="touch_unlock">Touch开锁</string>
    <string name="lock_tip_setting_failed">设置失败</string>
    <string name="lock_tip_open_ble">请打开蓝牙</string>
    <string name="lock_tip_ble_permission_not_allow">请授予蓝牙权限</string>
    <string name="lock_tip_open_ble_lock">请唤醒并连接锁设备获取最新钥匙信息</string>
    <string name="connect_lock">连接锁</string>
    <string name="tip_network_error">网络错误，请检查网络配置</string>
    <string name="lock_setting_adjust_time">锁时间</string>
    <string-array name="lock_type">
        <item>云锁</item>
        <item>门锁</item>
    </string-array>
    <string-array name="key_type">
        <item>其他</item>
        <item>永久钥匙</item>
        <item>限时钥匙</item>
        <item>单次钥匙</item>
        <item>循环钥匙</item>
    </string-array>
    <string name="once_time">单次</string>
    <string name="limit_time">限时</string>
    <string name="loop">循环</string>
    <string name="permanent">永久</string>
    <string-array name="key_status">
        <item>未知</item>
        <item>发送中</item>
        <item>冻结中</item>
        <item>解除冻结中</item>
        <item>删除中</item>
        <item>授权中</item>
        <item>取消授权中</item>
        <item>修改中</item>
        <item>正常</item>
        <item>已冻结</item>
        <item>已删除</item>
        <item>已失效</item>
        <item>已过期</item>
    </string-array>
    <string-array name="deviceTypeName">
        <item>指纹</item>
        <item>密码</item>
        <item>电子钥匙</item>
        <item>手机蓝牙</item>
        <item>卡片</item>
    </string-array>
    <string-array name="device_key_status">
        <item>正常</item>
        <item>已过期</item>
        <item>已失效</item>
        <item>已冻结</item>
    </string-array>
    <string-array name="device_key_auth_type">
        <item>永久</item>
        <item>限时</item>
        <item>循环</item>
    </string-array>
    <string name="lock_key_manager">钥匙管理</string>
    <string name="choose_group">选择分组</string>
    <string name="lock_key_status_sending">发送中</string>
    <string name="lock_key_status_frozening">冻结中</string>
    <string name="lock_key_status_cancel_frozen">解除冻结中</string>
    <string name="lock_key_status_delete">删除中</string>
    <string name="lock_key_status_authorize">授权中</string>
    <string name="lock_key_status_cancel_authorize">取消授权中</string>
    <string name="lock_key_status_fix">修改中</string>
    <string name="lock_key_status_normal">正常</string>
    <string name="lock_key_status_has_frozen">已冻结</string>
    <string name="lock_key_status_has_deleted">已删除</string>
    <string name="lock_key_status_has_invailed">已失效</string>
    <string name="lock_key_status_out_of_date">已过期</string>
    <string name="lock_delete_key_tips">确定删除该钥匙吗？删除会在用户APP联网后生效。</string>
    <string name="lock_delete_lock">删除锁</string>
    <string name="lock_to_grant_authorization_or_not">授权/取消授权</string>
    <string name="lock_to_frozen_or_not">冻结/解除冻结</string>
    <string name="lock_unfrozen">解除冻结</string>
    <string name="lock_unfrozen_tips">解除冻结会在用户APP联网后生效。</string>
    <string name="lock_frozen_tips">确定冻结该钥匙吗？冻结会在用户APP联网后生效。</string>
    <string name="lock_frozen">冻结</string>
    <string name="lock_delete_lock_tips">确定删除该锁吗？删除后所有的钥匙都将失效。</string>
    <string name="lock_verify_user_password_hint">请输入账号的密码</string>
    <string name="lock_safe_verify">安全验证</string>
    <string name="lock_create_group">创建新分组</string>
    <string name="lock_create_group_hint">请输入组名称</string>
    <string name="lock_anthorize_delete_lock_tip">同时删除其发送的所有钥匙，删除后无法恢复。</string>
    <string name="lock_clear">清空</string>
    <string name="lock_clear_all_keys_tips">确定清空该锁的全部钥匙吗？</string>
    <string name="lock_auth">授权</string>
    <string name="lock_key_auth_tips">授权用户拥有管理员的权限，可发送及管理钥匙。</string>
    <string name="lock_key_auth_title">确定授权该钥匙吗？</string>
    <string name="lock_key_cancel_auth_title">确定取消该钥匙的授权吗？</string>
    <string name="lock_key_cancel_auth_tips">取消授权会在用户APP联网后生效。</string>
    <string name="lock_to_auth">授权</string>
    <string name="lock_cancel_auth">取消授权</string>
    <string name="lock_make_sure_delete_auth_key">确定删除授权钥匙吗？</string>
    <string name="lock_make_sure_delete_auth_key_2">确定删除该钥匙吗？删除后无法恢复。</string>
    <string name="key_name">钥匙名称</string>
    <string name="lock_delete">删除</string>
    <string name="title_activity_device_key">DeviceKeyActivity</string>
    <string name="tab_text_finger">指纹</string>
    <string name="tab_text_pwd">密码</string>
    <string name="tab_text_ic">IC卡</string>
    <string name="tab_text_key">电子钥匙</string>
    <string name="tip_no_empty">暂无数据</string>
    <string name="tip_no_empty1">本页面数据空空如也</string>
    <string name="lock_go_lock_detail_fail_has_freeze">本设备已冻结</string>
    <string name="lock_go_lock_detail_fail_has_invalid">本设备已失效</string>
    <string name="lock_go_lock_detail_fail_has_overdue">本设备已过期</string>
    <string name="lock_key_remain">剩余开锁次数</string>
    <string name="lock_key_open_times">开锁次数</string>
    <string name="lock_open_record">开锁记录</string>
    <string name="lock_key_vaild_time">有效时间</string>
    <string name="lock_key_invaild_time">失效时间</string>
    <string name="lock_open_lock_invaild_tips">钥匙不在有效期内</string>
    <string name="lock_edit_name_hint">请输入1-20位中文、字母或数字</string>
    <string name="lock_all_groups">全部分组</string>
    <string name="lock_detail_key_detail">钥匙详情</string>
    <string name="device_key_time_unlimit">无限制</string>
    <string name="lock_detail_edit_permission">修改权限</string>
    <string name="lock_freeze_key">冻结钥匙</string>
    <string name="lock_unFreeze_key">解除冻结</string>
    <string name="lock_select_permission">选择权限类型</string>
    <string name="lock_cycle_validTime">生效时间</string>
    <string name="lock_cycle_startDate">启用日期</string>
    <string name="lock_cycle_endDate">停止日期</string>
    <string name="dateTime_format">"%4d/%02d/%02d %02d:%02d"</string>
    <string name="operate_success">操作成功</string>
    <string name="lock_device_key_operate_failed">操作失败，请检查蓝牙设置</string>
    <string name="operate_failed">操作失败</string>
    <string name="lock_device_key_connect_failed">连接失败</string>
    <string name="lock_device_key_load_failed">加载失败</string>
    <string name="lock_device_key_load_success">加载完成</string>
    <string name="timeAdjustTip">校准时间有助于获得更准确的服务</string>
    <string name="timeAdjust">校准时间</string>
    <string name="err_readLockTime">读取锁时间失败:</string>
    <string name="err_connect">连接锁失败</string>
    <string name="operateSuccess">操作成功</string>
    <string name="err_writeLockTime">校准锁时间失败:</string>
    <string name="BLE_NOT_SUPPORT">蓝牙不支持</string>
    <string name="BLE_NOT_OPEN">蓝牙未打开</string>
    <string name="NO_LOCATION_PERMISSION">请开启定位权限</string>
    <string name="wakeupDevice">请唤醒锁设备</string>
    <string name="scaning">正在搜索设备</string>
    <string name="connecting">正在连接设备</string>
    <string name="readingTime">正在读取时间</string>
    <string name="writingTime">正在校准时间</string>
    <string name="getLockTimeFailed">无法获取锁设备时间</string>
    <string name="checkConnect">请检查是否已连接锁设备并重试</string>
    <string name="retry">重试</string>
    <string name="lockTime">锁时间</string>
    <string name="serviceErr">服务器开小差</string>
    <string name="lock_device_key_record_description">%s,使用%s开锁</string>
    <string name="lock_device_key_tip_auth_type">请先解除冻结状态后再修改权限</string>
    <string name="lock_device_key_tip_auth_error1">开始时间不能大于或等于结束时间</string>
    <string name="lock_device_key_tip_auth_error2">启用日期不能大于或等于停止日期</string>
    <string name="lock_device_key_tip_auth_error3">生效时间不能大于或等于失效时间</string>
    <string name="lock_name_not_allow_null">名称不能为空</string>
    <string name="lock_freezen_key_not_allow_to_fix">解除冻结才能修改有效期</string>
    <string name="lock_device_key_admin_pwd">管理员密码</string>
    <string name="lock_device_key_user_pwd">用户密码</string>
    <string name="lock_device_key_temp_pwd">临时密码</string>
    <string name="lock_device_key_admin_pwd_tip">管理员密码不能修改</string>
    <string name="lock_near_lock_scan_tip">下拉页面，搜索已唤醒的锁设备</string>
    <string name="lock_near_lock_scan_tip_error">搜索失败</string>
    <string name="lock_bt_disconnect_tips">与锁的蓝牙连接失败，请重试</string>
    <string name="lock_unbind_fail_tips">解除绑定失败，请重试</string>
    <string name="lock_gps_open_tips">APP需要您打开GPS位置定位开关，前往设置？</string>
    <string name="lock_ok">好的</string>
</resources>