<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AddGuideActivity">

    <include
        android:id="@+id/title"
        layout="@layout/toolbar_white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/bitmap_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.75"/>

    <TextView
        android:id="@+id/tv_addguid_content1"
        style="@style/AddGuideTV.drawableLeft"
        android:layout_marginTop="@dimen/base_20dp"
        android:text="@string/lock_add_guide_content1"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/tv_addguid_content2"
        style="@style/AddGuideTV.drawableLeft"
        android:layout_marginTop="@dimen/base_10dp"
        android:text="@string/lock_add_guide_content2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_addguid_content1"/>

    <TextView
        android:id="@+id/tv_addguid_content3"
        style="@style/AddGuideTV.drawableLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_10dp"
        android:gravity="start"
        android:lines="2"
        android:text="@string/lock_add_guide_content3"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_addguid_content2"
        app:layout_constraintWidth_percent="0.75"
        />

    <TextView
        android:id="@+id/tv_addguid_content4"
        style="@style/AddGuideTV.drawableLeft"
        android:layout_marginTop="@dimen/base_10dp"
        android:text="@string/lock_add_guide_content4"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_addguid_content3"/>

    <Button
        android:id="@+id/btn_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_20dp"
        android:background="@drawable/bg_btn_green"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="onXmlClick"
        android:text="@string/lock_add_guide_btn_next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"/>
</android.support.constraint.ConstraintLayout>
