<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F9FB"
        android:orientation="vertical">

        <include layout="@layout/toolbar_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/shape_bg_left_right_bottom_corner"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_70dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/base_20dp"
                android:paddingRight="@dimen/base_20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lock_key_name"
                    android:textColor="#666666"
                    android:textSize="@dimen/base_14sp"/>

                <TextView
                    android:id="@+id/tv_key_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:textColor="#666666"
                    android:textSize="@dimen/base_17sp"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#DFDFDF"/>

            <EditText
                android:id="@+id/edt_ask_for"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_120dp"
                android:background="@android:color/white"
                android:gravity="top"
                android:hint="@string/lock_apply_ask_for_hint"
                android:padding="@dimen/base_10dp"
                android:textColor="@color/color_base_title"
                android:textColorHint="#CCCCCC"
                android:textSize="@dimen/base_14sp"/>
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lock_20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/base_20dp"
            android:paddingRight="@dimen/base_20dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_50dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/selector_bg_radio"
                android:text="@string/lock_permanent_key"
                android:textColor="#666666"
                android:textSize="@dimen/base_14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/lock_0_5dp"
                android:background="@color/lock_color_btn_gray"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_50dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/selector_bg_radio"
                android:text="@string/lock_limited_time_key"
                android:textColor="#666666"
                android:textSize="@dimen/base_14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/lock_0_5dp"
                android:background="@color/lock_color_btn_gray"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_50dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/selector_bg_radio"
                android:text="@string/lock_once_key"
                android:textColor="#666666"
                android:textSize="@dimen/base_14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/lock_0_5dp"
                android:background="@color/lock_color_btn_gray"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_50dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/selector_bg_radio"
                android:text="@string/lock_loop_key"
                android:textColor="#666666"
                android:textSize="@dimen/base_14sp"/>
        </RadioGroup>


        <View
            android:layout_width="1px"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_20dp"
            android:layout_marginRight="@dimen/base_20dp"
            android:layout_marginBottom="@dimen/base_10dp"
            android:background="@drawable/selector_btn_save"
            android:text="@string/lock_commit_apply"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</layout>
